<?xml version="1.0" encoding="UTF-8"?>
<!--
| Licensed to the Apache Software Foundation (ASF) under one
| or more contributor license agreements. See the NOTICE file
| distributed with this work for additional information
| regarding copyright ownership. The ASF licenses this file
| to you under the Apache License, Version 2.0 (the
| "License"); you may not use this file except in compliance
| with the License. You may obtain a copy of the License at
|
| http://www.apache.org/licenses/LICENSE-2.0
|
| Unless required by applicable law or agreed to in writing,
| software distributed under the License is distributed on an
| "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
| KIND, either express or implied. See the License for the
| specific language governing permissions and limitations
| under the License.
-->
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xmlns="http://maven.apache.org/POM/4.0.0"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<!-- POM file generated with GWT webAppCreator -->
	<modelVersion>4.0.0</modelVersion>
	<groupId>de.interseroh.report</groupId>
	<artifactId>report-cockpit-birt-web</artifactId>
	<packaging>war</packaging>
	<name>report-cockpit-birt-web</name>
	<version>1.2.0-SNAPSHOT</version>
	<url>https://github.com/interseroh/report-cockpit-birt-web</url>
	<description>Report Cockpit for BIRT</description>

	<scm>
		<connection>
			scm:git:git@github.com:interseroh/report-cockpit-birt-web.git
		</connection>
		<developerConnection>
            scm:git:git@github.com:interseroh/report-cockpit-birt-web.git
        </developerConnection>
	</scm>

	<properties>
		<webappDirectory>${project.build.directory}/${project.build.finalName}</webappDirectory>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<spring.version>4.2.0.RELEASE</spring.version>
		<spring.security.version>4.0.2.RELEASE</spring.security.version>
		<spring.data.version>1.8.2.RELEASE</spring.data.version>
		<hibernate.version>4.3.11.Final</hibernate.version>
		<jackson-version>2.0.2</jackson-version>
		<kissmda.maven.plugin.version>2.1.1</kissmda.maven.plugin.version>
        <kissmda.cartridges.simple.java.version>2.1.1</kissmda.cartridges.simple.java.version>
        <kissmda.extensions.importpacker.version>2.1.1</kissmda.extensions.importpacker.version>
		<sonar.language>java</sonar.language>
		<sonar.excludsions>
			**/jquery.min.js,**/jquery.js,**/boostrap.js,**/npm.js
		</sonar.excludsions>
	</properties>

	<dependencies>
		<!-- Spring Web -->
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-webmvc</artifactId>
			<version>${spring.version}</version>
			<exclusions>
				<exclusion>
					<groupId>commons-logging</groupId>
					<artifactId>commons-logging</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<!-- Spring Security -->
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-web</artifactId>
			<version>${spring.security.version}</version>
		</dependency>

		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-config</artifactId>
			<version>${spring.security.version}</version>
		</dependency>

		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-ldap</artifactId>
			<version>${spring.security.version}</version>
		</dependency>

		<!-- Thymeleaf -->
		<dependency>
			<groupId>org.thymeleaf</groupId>
			<artifactId>thymeleaf</artifactId>
			<version>2.1.4.RELEASE</version>
			<scope>compile</scope>
		</dependency>

		<dependency>
			<groupId>org.thymeleaf</groupId>
			<artifactId>thymeleaf-spring4</artifactId>
			<version>2.1.4.RELEASE</version>
			<scope>compile</scope>
		</dependency>

		<dependency>
			<groupId>org.thymeleaf.extras</groupId>
			<artifactId>thymeleaf-extras-springsecurity4</artifactId>
			<version>2.1.2.RELEASE</version>
			<scope>compile</scope>
		</dependency>

		<dependency>
			<groupId>nz.net.ultraq.thymeleaf</groupId>
			<artifactId>thymeleaf-layout-dialect</artifactId>
			<version>1.2.9</version>
		</dependency>

		<!-- Logger stuffs -->
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>1.1.3</version>
		</dependency>

		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>jcl-over-slf4j</artifactId>
			<version>1.7.12</version>
		</dependency>

		<!-- Java EE APIs -->
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>javax.servlet-api</artifactId>
			<version>3.0.1</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>javax.validation</groupId>
			<artifactId>validation-api</artifactId>
			<version>1.0.0.GA</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>javax.validation</groupId>
			<artifactId>validation-api</artifactId>
			<version>1.0.0.GA</version>
			<classifier>sources</classifier>
			<scope>test</scope>
		</dependency>

		<!-- Spring Test -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>1.10.19</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.hamcrest</groupId>
			<artifactId>hamcrest-all</artifactId>
			<version>1.3</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-test</artifactId>
			<version>${spring.version}</version>
			<scope>test</scope>
		</dependency>

		<!-- Apache DS for test -->
		<dependency>
			<groupId>org.apache.directory.server</groupId>
			<artifactId>apacheds-server-jndi</artifactId>
			<version>1.5.5</version>
			<scope>test</scope>
			<exclusions>
				<exclusion>
					<artifactId>slf4j-api</artifactId>
					<groupId>org.slf4j</groupId>
				</exclusion>
			</exclusions>
		</dependency>

		<!-- JSON Provider -->
		<dependency>
			<groupId>com.fasterxml.jackson.jaxrs</groupId>
			<artifactId>jackson-jaxrs-json-provider</artifactId>
			<version>${jackson-version}</version>
		</dependency>

		<!-- BIRT Runtime -->
		<dependency>
			<groupId>org.eclipse.birt.runtime</groupId>
			<artifactId>org.eclipse.birt.runtime</artifactId>
			<version>4.4.2</version>
		</dependency>

		<dependency>
			<groupId>rhino</groupId>
			<artifactId>js</artifactId>
			<version>1.7R2</version>
		</dependency>

		<!-- Spring Data -->
		<dependency>
			<groupId>org.springframework.data</groupId>
			<artifactId>spring-data-jpa</artifactId>
			<version>${spring.data.version}</version>
		</dependency>

		<!-- Hibernate -->
		<dependency>
    		<groupId>org.hibernate</groupId>
    		<artifactId>hibernate-core</artifactId>
    		<version>${hibernate.version}</version>
		</dependency>
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-entitymanager</artifactId>
			<version>${hibernate.version}</version>
		</dependency>

		<!-- Hikari DataSource -->
		<dependency>
			<groupId>com.zaxxer</groupId>
			<artifactId>HikariCP</artifactId>
			<version>2.4.1</version>
			<scope>compile</scope>
		</dependency>

        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <version>9.4-1206-jdbc41</version>
            <scope>runtime</scope>
        </dependency>

		<!-- HSQLDB -->
		<dependency>
			<groupId>org.hsqldb</groupId>
			<artifactId>hsqldb</artifactId>
			<version>2.3.2</version>
            <scope>runtime</scope>
		</dependency>

        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.4</version>
        </dependency>
		<!-- Flyway DB Migration -->
		<dependency>
            <groupId>org.flywaydb</groupId>
            <artifactId>flyway-core</artifactId>
            <version>3.2.1</version>
        </dependency>
	</dependencies>

	<build>
		<finalName>${project.artifactId}</finalName>

		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
				<includes>
					<include>version.properties</include>
				</includes>
			</resource>
			<resource>
				<directory>src/main/resources</directory>
			</resource>
		</resources>

		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.3</version>
				<configuration>
					<source>1.7</source>
					<target>1.7</target>
				</configuration>
			</plugin>

			<!--<plugin>-->
				<!--<groupId>org.bsc.maven</groupId>-->
				<!--<artifactId>maven-processor-plugin</artifactId>-->
				<!--<version>3.1.0-beta1</version>-->
				<!--<executions>-->
					<!--<execution>-->
						<!--<id>process</id>-->
						<!--<goals>-->
							<!--<goal>process</goal>-->
						<!--</goals>-->
						<!--<phase>generate-sources</phase>-->
						<!--<configuration>-->
							<!--<processors>-->
								<!--<processor>org.hibernate.jpamodelgen.JPAMetaModelEntityProcessor</processor>-->
							<!--</processors>-->
						<!--</configuration>-->
					<!--</execution>-->
				<!--</executions>-->
				<!--<dependencies>-->
					<!--<dependency>-->
						<!--<groupId>org.hibernate</groupId>-->
						<!--<artifactId>hibernate-jpamodelgen</artifactId>-->
						<!--<version>${hibernate.version}</version>-->
					<!--</dependency>-->
				<!--</dependencies>-->
			<!--</plugin>-->

			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>build-helper-maven-plugin</artifactId>
				<version>1.9.1</version>
				<executions>
					<execution>
						<id>add-source</id>
						<phase>generate-sources</phase>
						<goals>
							<goal>add-source</goal>
						</goals>
						<configuration>
							<sources>
								<source>target/generated-sources/java</source>
								<source>target/generated-sources/apt</source>
							</sources>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>de.juplo</groupId>
				<artifactId>hibernate4-maven-plugin</artifactId>
				<version>1.0.5</version>
				<configuration>
					<hibernateProperties>src/test/resources/hibernate.hbm2ddl.properties</hibernateProperties>
					<target>SCRIPT</target>
				</configuration>
			</plugin>

			<plugin>
				<groupId>de.crowdcode.kissmda.maven</groupId>
				<artifactId>kissmda-maven-plugin</artifactId>
				<version>${kissmda.maven.plugin.version}</version>
				<dependencies>
					<dependency>
						<groupId>de.crowdcode.kissmda.cartridges</groupId>
						<artifactId>kissmda-cartridges-simple-java</artifactId>
						<version>${kissmda.cartridges.simple.java.version}</version>
					</dependency>
					<dependency>
						<groupId>de.crowdcode.kissmda.cartridges</groupId>
						<artifactId>kissmda-extensions-import-packer</artifactId>
						<version>${kissmda.extensions.importpacker.version}</version>
					</dependency>
				</dependencies>
				<executions>
					<execution>
						<phase>generate-sources</phase>
						<goals>
							<goal>generate</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<transformerScanPackageNames>
						<transformerScanPackageName>de.crowdcode.kissmda.cartridges</transformerScanPackageName>
					</transformerScanPackageNames>
					<transformerNameWithOrders>
						<transformerNameWithOrder>
							1:de.crowdcode.kissmda.extensions.importpacker.ImportPackerTransformer
						</transformerNameWithOrder>
						<transformerNameWithOrder>
							2:de.crowdcode.kissmda.cartridges.simplejava.SimpleJavaTransformer
						</transformerNameWithOrder>
					</transformerNameWithOrders>
					<modelFile>src/main/resources/model/emf/report-cockpit-birt.uml</modelFile>
					<loggingLevel>DEBUG</loggingLevel>
					<targetEncoding>UTF-8</targetEncoding>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-antrun-plugin</artifactId>
				<version>1.8</version>
				<executions>
					<execution>
						<id>copy-files</id>
						<phase>initialize</phase>
						<goals>
							<goal>run</goal>
						</goals>
						<configuration>
							<target>
								<copy file="src/main/resources/config.properties_example"
									tofile="src/main/resources/config.properties" />
								<copy file="src/main/resources/logback.xml_example" tofile="src/main/resources/logback.xml" />
								<copy file="src/main/resources/server.properties_example"
									tofile="src/main/resources/server.properties" />
								<copy file="src/main/resources/report-config.properties_example"
									tofile="src/main/resources/report-config.properties" />
								<copy file="src/test/resources/hibernate.hbm2ddl.properties_example"
									tofile="src/test/resources/hibernate.hbm2ddl.properties" />
								<copy file="src/test/resources/logback-test.xml_example"
									tofile="src/test/resources/logback-test.xml" />
								<copy file="src/test/resources/report-config.properties_example"
									tofile="src/test/resources/report-config.properties" />
							</target>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.tomcat.maven</groupId>
				<artifactId>tomcat7-maven-plugin</artifactId>
				<version>2.2</version>
				<configuration>
					<url>${tomcat-server}</url>
					<server>tomcat-server</server>
					<path>/${project.artifactId}</path>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>properties-maven-plugin</artifactId>
				<version>1.0-alpha-2</version>
				<executions>
					<execution>
						<phase>initialize</phase>
						<goals>
							<goal>read-project-properties</goal>
						</goals>
						<configuration>
							<files>
								<file>src/main/resources/server.properties
								</file>
							</files>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.18.1</version>
				<configuration>
					<includes>
						<include>**/*AllTests.java</include>
					</includes>
					<!-- Disable Assertions due to Birt Engine -->
					<enableAssertions>false</enableAssertions>
					<!--<forkCount>4</forkCount>-->
					<!--<reuseForks>true</reuseForks>-->
					<!--<argLine>-Xmx1800M -XX:MaxPermSize=512M</argLine>-->
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>2.18.1</version>
				<executions>
					<execution>
						<goals>
							<goal>integration-test</goal>
							<goal>verify</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<includes>
						<include>**/*AllITs.java</include>
					</includes>
				</configuration>
			</plugin>
		</plugins>

		<pluginManagement>
			<plugins>
				<!--This plugin's configuration is used to store Eclipse m2e settings
					only. It has no influence on the Maven build itself. -->
				<plugin>
					<groupId>org.eclipse.m2e</groupId>
					<artifactId>lifecycle-mapping</artifactId>
					<version>1.0.0</version>
					<configuration>
						<lifecycleMappingMetadata>
							<pluginExecutions>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>
											org.apache.maven.plugins
										</groupId>
										<artifactId>
											maven-antrun-plugin
										</artifactId>
										<versionRange>
											[1.8,)
										</versionRange>
										<goals>
											<goal>run</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore></ignore>
									</action>
								</pluginExecution>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>
											org.codehaus.mojo
										</groupId>
										<artifactId>
											properties-maven-plugin
										</artifactId>
										<versionRange>
											[1.0-alpha-2,)
										</versionRange>
										<goals>
											<goal>
												read-project-properties
											</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore></ignore>
									</action>
								</pluginExecution>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>
											de.crowdcode.kissmda.maven
										</groupId>
										<artifactId>
											kissmda-maven-plugin
										</artifactId>
										<versionRange>
											[2.0.0,)
										</versionRange>
										<goals>
											<goal>generate</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore></ignore>
									</action>
								</pluginExecution>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>org.bsc.maven</groupId>
										<artifactId>
											maven-processor-plugin
										</artifactId>
										<versionRange>
											[2.0.5,)
										</versionRange>
										<goals>
											<goal>process</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore></ignore>
									</action>
								</pluginExecution>
							</pluginExecutions>
						</lifecycleMappingMetadata>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<profiles>
		<profile>
			<id>development</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.zeroturnaround</groupId>
						<artifactId>jrebel-maven-plugin</artifactId>
						<version>1.1.5</version>
						<configuration>
							<relativePath>.</relativePath>
							<classpath>
								<fallback>default</fallback>
								<resources>
								</resources>
							</classpath>
						</configuration>
						<executions>
							<execution>
								<id>generate-rebel-xml</id>
								<phase>process-resources</phase>
								<goals>
									<goal>generate</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<distributionManagement>
		<repository>
			<id>nexus</id>
			<name>snapshots</name>
			<url>http://nexus/repository/snapshots</url>
		</repository>
	</distributionManagement>
</project>
